--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,18 @@ body{
 /*		border: 1px solid black;*/
 	}
 }
+.edit-button{
+	padding: 0.1rem .5rem;
+    background-color: royalblue;
+    border-radius: 0.5rem;
+    opacity: 0.66;
+    transition: opacity 0.2s ease;
+    cursor: pointer;
+    color: white;
+    border: none;
+    font-size: 1.25rem;
+    margin-top: 10px;
+}
+.edit-button:hover {
+    opacity: 1;
+}
