--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,11 @@ body{
 }
 .person{
 	padding: 1rem 2rem;
+
 	.person-name{
-		font-size: 1.5rem;
+		font-size: 2rem;
 		font-weight: bold;
+		padding: 0 0 .5rem 0;
 		.person-name-middle{
 			font-style: italic;
 		}
@@ -88,7 +90,7 @@ body{
     color: white;
     border: none;
     font-size: 1.25rem;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .edit-button:hover {
     opacity: 1;
