--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@ body{
 	flex-direction: column;
 	box-sizing: border-box;
 }
+.person{
+	text-align: center;
+}
+
+.person-name{
+	font-size: 2.5rem;
+	font-weight: bold;
+}
 
 .person-name-middle{
 	font-style: italic;
