--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,30 @@ body{
 	box-sizing: border-box;
 }
 .person{
-	text-align: center;
+/*	text-align: center;*/
+	display: inline-block;
 }
 
 .person-name{
 	font-size: 2.5rem;
 	font-weight: bold;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	translate: -50%;
 }
 
 .person-name-middle{
 	font-style: italic;
 }
-
+.person-details{
+	margin-top: 3.33rem;
+}
+#person-controls{
+	display: flex;
+	justify-content: center;
+	gap: 1rem;
+}
 .menu-person{
 	font-size: 2em;
 	margin: .5rem 1rem;
@@ -65,6 +77,10 @@ body{
 	flex: 1 1 0%;
 	padding: .5rem;
 }
+#content:has(.person){
+	display: flex;
+	justify-content: center;
+}
 .edit-button{
 	padding: 0.1rem .5rem;
     background-color: royalblue;
@@ -76,6 +92,7 @@ body{
     border: none;
     font-size: 1.25rem;
     margin-top: 5px;
+
 }
 .edit-button:hover {
     opacity: 1;
