--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
 .person{
 /*	text-align: center;*/
 	display: inline-block;
+
 }
 
 #person-name{
@@ -23,6 +24,15 @@ body{
 }
 #person-details{
 	margin-top: 3.33rem;
+	position: absolute;
+	left: 50%;
+	span::after{
+		position: absolute;
+		right: 100%;
+		content: ':';
+		width: 1.5ch;
+		text-align: center;
+	}
 }
 span[contenteditable]{
 	outline: none;
@@ -34,11 +44,18 @@ span[contenteditable]:hover{
 span[contenteditable]:focus{
 	text-decoration: underline;
 }
-#person-controls{
-	display: flex;
-	justify-content: center;
-	gap: 1rem;
+span{
+	position: relative;
 }
+span::before{
+	content: attr(label);
+	position: absolute;
+	right: 100%;
+	white-space: nowrap;
+	margin-right: .75ch;
+	padding-right: .75ch;
+}
+
 .menu-person{
 	font-size: 2em;
 	margin: .5rem 1rem;
@@ -77,7 +94,7 @@ span[contenteditable]:focus{
 			transition: .2s;
 			cursor: pointer;
 		}
-	 	label:hover{
+		label:hover{
 			opacity: 1;
 		}
 	}
@@ -91,35 +108,42 @@ span[contenteditable]:focus{
 	display: flex;
 	justify-content: center;
 }
+#person-controls{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	position: absolute;
+	margin-top: .5rem;
+	gap: .25rem;
+	translate: -50%;
+	left: -0.75ch;
+}
 .edit-button{
 	padding: 0.1rem .5rem;
-    background-color: royalblue;
-    border-radius: 0.5rem;
-    opacity: 0.66;
-    transition: opacity 0.2s ease;
-    cursor: pointer;
-    color: white;
-    border: none;
-    font-size: 1.25rem;
-    margin-top: 5px;
-
+	background-color: royalblue;
+	border-radius: 0.5rem;
+	opacity: 0.66;
+	transition: opacity 0.2s ease;
+	cursor: pointer;
+	color: white;
+	border: none;
+	font-size: 1.25rem;
 }
 .edit-button:hover {
-    opacity: 1;
+	opacity: 1;
 }
 
 .delete-button{
 	padding: 0.1rem .5rem;
-    background-color: indianred;
-    border-radius: 0.5rem;
-    opacity: 0.66;
-    transition: opacity 0.2s ease;
-    cursor: pointer;
-    color: white;
-    border: none;
-    font-size: 1.25rem;
-    margin-top: 5px;
+	background-color: indianred;
+	border-radius: 0.5rem;
+	opacity: 0.66;
+	transition: opacity 0.2s ease;
+	cursor: pointer;
+	color: white;
+	border: none;
+	font-size: 1.25rem;
 }
 .delete-button:hover {
-    opacity: 1;
+	opacity: 1;
 }
